Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-5507

[Plasma] [CUDA] Compile error

    XMLWordPrintableJSON

Details

    Description

      I'm starting getting this today:

      ../src/plasma/protocol.cc:546:55: error: no matching member function for call to 'CreateVector'
            handles.push_back(fb::CreateCudaHandle(fbb, fbb.CreateVector(handle)));
                                                        ~~~~^~~~~~~~~~~~
      /home/antoine/miniconda3/envs/pyarrow/include/flatbuffers/flatbuffers.h:1484:27: note: candidate function not viable: no known conversion from 'std::shared_ptr<arrow::Buffer>' to 'const std::vector<bool>' for 1st argument
        Offset<Vector<uint8_t>> CreateVector(const std::vector<bool> &v) {
                                ^
      /home/antoine/miniconda3/envs/pyarrow/include/flatbuffers/flatbuffers.h:1477:42: note: candidate template ignored: could not match 'vector' against 'shared_ptr'
        template<typename T> Offset<Vector<T>> CreateVector(const std::vector<T> &v) {
                                               ^
      /home/antoine/miniconda3/envs/pyarrow/include/flatbuffers/flatbuffers.h:1443:42: note: candidate function template not viable: requires 2 arguments, but 1 was provided
        template<typename T> Offset<Vector<T>> CreateVector(const T *v, size_t len) {
                                               ^
      /home/antoine/miniconda3/envs/pyarrow/include/flatbuffers/flatbuffers.h:1465:29: note: candidate function template not viable: requires 2 arguments, but 1 was provided
        Offset<Vector<Offset<T>>> CreateVector(const Offset<T> *v, size_t len) {
                                  ^
      /home/antoine/miniconda3/envs/pyarrow/include/flatbuffers/flatbuffers.h:1501:42: note: candidate function template not viable: requires 2 arguments, but 1 was provided
        template<typename T> Offset<Vector<T>> CreateVector(size_t vector_size,
                                               ^
      /home/antoine/miniconda3/envs/pyarrow/include/flatbuffers/flatbuffers.h:1520:21: note: candidate function template not viable: requires 3 arguments, but 1 was provided
        Offset<Vector<T>> CreateVector(size_t vector_size, F f, S *state) {
                          ^
      

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 20m
                  1h 20m