ARROW-5507: [Plasma] [CUDA] Fix compile error